--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Orchid."
+description: "Hey, I'm Doupeng."
 header-img: "img/about-bg.jpg"
 ---
 
@@ -14,21 +14,16 @@ header-img: "img/about-bg.jpg"
 <!-- Chinese Version -->
 <div class="zh">
     <blockquote>
-        与善人居，如入芝兰之室，<br>
-        久而不闻其香，即与之化矣。
+        我喜欢抽象的事物<br>
+        但我更加热爱真实的生活...
     </blockquote>
-
-    <p>
-    西北工业大学研究生一枚，在<a href="http://www.wnclab.com">@无线网络与通信实验室</a>学习。热爱机器学习，人工智能，喜欢有前景、有挑战的事情。
-    </p>
-    <p>爱好书法、音乐、中国舞。喜欢李健、窦唯。</p>
-    <p>哦对了，我叫<b>Orchid</b>
+    <p>我叫<b>窦朋</b>，毕业于河北大学，虽然不是什么名牌大学，而且在大学我学的专业是俄语专业，获得了俄语专业四级证书，(现在估计只会问句你好了...TT)</p>
+    <p>但这并不影响我学习<b>python</b>的热情，python代表了简单主义思想的编程语言，正所谓人生苦短，我用python...</p>
+    <p>微信公众号:苦短人生遂学python</p>
+    <p>邮箱:doupeng93@foxmail.com</p>
     <hr>
     <br>
-    最后附上我的简历:
-    <ul>
-        <li><a href="{{site.baseUrl}}/attach/2015_Orchid_ch.pdf"> 2015_Orchid_ch </a></li>
-    </ul>
+    这里是<a href="{{site.baseUrl}}/jianli/doupeng"> 我的简历 </a>
 </div>
 
 <!-- English Version -->
