--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Don't be afraid of the UNKNOWN."
+description: "一生追逐自己想要的"
 ---
 
 {% for post in paginator.posts %}
