--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "Hey, I'm Doupeng."
+title: "关于我"
+description: "你好!我是窦朋"
 header-img: "img/about-bg.jpg"
 ---
 
@@ -29,15 +29,15 @@ header-img: "img/about-bg.jpg"
 <!-- English Version -->
 <div class="en">
     <blockquote>
-        Researcher or Engineer, things in between.
+        ...
     </blockquote>
 
-    <p>I, Robot</p>
+    <p>...</p>
     <hr>
     <br>
-    Interested in more details? Checkout my resumes:
+    ...
     <ul>
-        <li><a href="{{site.baseUrl}}/attach/2015_Orchid_ch.pdf"> 2015_Orchid_ch </a></li>
+        <li><a href="{{site.baseUrl}}/jianli/doupeng"> ...<a></li>
     </ul>
 </div>
 
