--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "关于"
-description: "你好!我是窦朋"
+title: "About"
+description: "Hey! I'm Doupeng"
 header-img: "img/about-bg.jpg"
 ---
 
