--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey! I'm Doupeng"
+description: "你好！很高兴认识你"
 header-img: "img/about-bg.jpg"
 ---
 
@@ -17,8 +17,10 @@ header-img: "img/about-bg.jpg"
         我喜欢抽象的事物<br>
         但我更加热爱真实的生活...
     </blockquote>
-    <p>我叫<b>窦朋</b>，毕业于河北大学，虽然不是什么名牌大学，而且在大学我学的专业是俄语专业，获得了俄语专业四级证书，(现在估计只会问句你好了...TT)</p>
-    <p>但这并不影响我学习<b>python</b>的热情，python代表了简单主义思想的编程语言，正所谓人生苦短，我用python...</p>
+    <p><b>python工程师</b> | <b>爬虫工程师</b> | <b>数据分析工程师</b></p>
+    <p>我叫窦朋，2015年毕业于河北大学</p>
+    <p>我喜欢简单而又炫酷的世界</p>
+    <p>python是简单主义思想的编程语言，正所谓人生苦短，我用python，但又可以做出十分炫酷的东西，被它深深吸引着...</p>
     <p>微信公众号:苦短人生遂学python</p>
     <p>邮箱:doupeng93@foxmail.com</p>
     <hr>
