--- a/read.html
+++ b/read.html
@@ -1,6 +1,8 @@
 ---
 layout: page
+title: "阅读"
 description: "追逐自己想要的"
+header-img: "img/home-bg_meitu_1.jpg"
 ---
 
 {% for post in paginator.posts %}
