--- a/about.html
+++ b/about.html
@@ -18,14 +18,11 @@ header-img: "img/about-bg.jpg"
         但我更加热爱真实的生活...
     </blockquote>
     <p><b>python工程师</b> | <b>爬虫工程师</b> | <b>数据分析工程师</b></p>
-    <p>我叫窦朋，2015年毕业于河北大学</p>
-    <p>我喜欢简单而又炫酷的世界</p>
-    <p>python是简单主义思想的编程语言，正所谓人生苦短，我用python，但又可以做出十分炫酷的东西，被它深深吸引着...</p>
-    <p>微信公众号:苦短人生遂学python</p>
-    <p>邮箱:doupeng93@foxmail.com</p>
+    <p>我叫窦朋，2015年毕业于河北大学。</p>
+    <p>我喜欢简单而又炫酷的世界，人生苦短，我用python。</p>
     <hr>
     <br>
-    这里是<a href="{{site.baseUrl}}/jianli/doupeng"> 我的简历 </a>
+    <p>&#9755;<a href="https://doupengs.github.io/me.html">我的联系方式</a></p>
 </div>
 
 <!-- English Version -->
