--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "关于"
 description: "你好！很高兴认识你"
-header-img: "img/mp-bg.jpg"
+header-img: "img/mp_bg.jpg"
 ---
 
 <!-- Language Selector -->
