--- a/birthday/index.html
+++ b/birthday/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>朱 生日快乐! - @猿来如此</title>
+  <title>朱你生日快乐! - @猿来如此</title>
 
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css" media="screen" type="text/css" />
@@ -174,7 +174,7 @@
   <p>2017年 正月十三<p>
   <br>
   <br>
-  <h1>朱 你生日快乐！</h1>
+  <h1>朱你生日快乐！</h1>
   <br>
   <br>
   <audio id="music" controls autoplay loop >
