--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@ header-img: "img/mp_bg.jpg"
     </blockquote>
     <p><b>Python Engineer</b> | <b>Crawler Engineer</b> | <b>Data Analysis Engineer</b></p>
     <p>My name is DouPeng, graduated from hebei university at the year of 2015.</p>
-    <p>As far as I am concerned, I like simple and cool thing."life is too short, I use the python"</p>
+    <p>As far as I am concerned, I like simple and cool thing. "Life is too short, I use the python"</p>
     <hr>
     <br>
     <p>&#9755;<a href="https://doupengs.github.io/me.html">Contact me</a></p>
