--- a/game/zwq_love_ls.html
+++ b/game/zwq_love_ls.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>2048</title>
+  <title>做张EXCEL表选中拉一拉</title>
 
   <link href="style/main_zwq.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -24,8 +24,8 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
-      <a class="restart-button">New Game</a>
+      <p class="game-intro">努力!💞💞💞2048有<strong>惊喜！</strong></p>
+      <a class="restart-button">爱的开始！</a>
     </div>
 
     <div class="game-container">
@@ -70,10 +70,17 @@
     </div>
     <p style='text-align:center;'>
       <br>
-      <br>
-      <br>
-      <br>
-      Copyright © <a href='https://doupengs.github.io/'>猿来如此</a> 2017
+      光阴的故事里，<br>
+      思念亭亭如盖，<br>
+      岁月覆满青苔，<br>
+      沿途美景盛开，<br>
+      我喜欢这世界，<br>
+      因为有你在。<br><br>
+      执子之手，共视远方，<br>
+      夕阳西下，与子偕老！<br><br>
+      2017/02/14<br><br>
+      Copyright © |张伟齐💕 罗爽| 2017-永远<br>
+      💋版权所有
     </p>
   </div>
 
