--- a/birthday2/index.html
+++ b/birthday2/index.html
@@ -60,10 +60,10 @@
 	        <div class="page page4">
 	        	<div class="readme">
 	        	</div>
-	        	<p style="text-align:center; color:#CAFF70;">小戈同学</p>
-	        	<p style="text-align:center; color:#00EEEE;">祝你生日快乐</p>
-	        	<p style="text-align:center; color:#EEAD0E;">永远开心开了</p>
-	        	<p style="text-align:center; color:#FF4040;">越来越美丽</p>
+	        	<p>小戈同学</p>
+	        	<p>祝你生日快乐</p>
+	        	<p>永远开心</p>
+	        	<p>越来越美丽</p>
 	        	<small>
 	        		查看源代码<br>
 	        		☛ <a href='https://github.com/doupengs' style='text-decoration: none;'><font color=''>Github / doupengs</font><a><br>
