--- a/game/2048.html
+++ b/game/2048.html
@@ -67,7 +67,8 @@
       <br>
       <br>
       <br>
-      Copyright © <a href='https://doupengs.github.io/'>猿来如此</a> 2017
+      Copyright © |我💕 你| 2017-永远<br>
+      💋版权所有
     </p>
   </div>
   <script src="js/bind_polyfill.js"></script>
