--- a/game/2048.html
+++ b/game/2048.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>2048情人节限定版-@猿来如此</title>
+  <title>2048纪念版-@猿来如此</title>
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
+      <p class="game-intro">你在我左胸第四根肋骨一寸往里的地方,听他们说那里是<strong>心脏.</strong></p>
       <a class="restart-button">New Game</a>
     </div>
     <div class="game-container">
@@ -65,9 +65,9 @@
     <p style='text-align:center;'>
       <br>
       <br>
+      这个你也许永远也看不到
       <br>
-      <br>
-      Copyright © |我💕 你| 2017-永远<br>
+      Copyright © | None 💕 忘记了你的名字 | 2017<br>
       💋版权所有
     </p>
   </div>
