--- a/game/2048.html
+++ b/game/2048.html
@@ -69,7 +69,7 @@
       <br>
       <br>
       <br>
-      Copyright © | None 💕 忘记了你的名字 | 2017<br>
+      Copyright © | None 💕 Null | 2017<br>
       💋版权所有
     </p>
   </div>
