--- a/resume.html
+++ b/resume.html
@@ -6,18 +6,21 @@
     <link rel="stylesheet" type="text/css" href="http://img00.zhaopin.cn/2012/css/reset.min.css" media="all" />
     <link rel="stylesheet" type="text/css" href="http://i.zhaopin.com/Content/css/resume_preview.css" media="all" />
   </head>
-  <body>
+  <body bgcolor='#F0F0F0'>
+    <div style='margin:0 auto; width:1000px;'>
     <div class="resumeBody">
       <div class="summary">
-        <img width="144" height="256" align="right" class="headerImg" alt="窦朋" src="http://mypics.zhaopin.com/pic/2017/3/2/4CFF8AC9C1334A6CB9FAF2FFFD2D4D32.jpg" />
+        <img width="216" height="384" align="right" class="headerImg" alt="窦朋" src="http://mypics.zhaopin.com/pic/2017/3/2/4CFF8AC9C1334A6CB9FAF2FFFD2D4D32.jpg" />
+        <small><font color='#FFD39B'>简历更新日期：2017-03-02</font></small>
+        <hr align='left' color="#FFD39B" width='50%'>
         <h1>窦朋</h1>
-        男 | 汉 | 未婚 | 1993年2月 | 2年工作经验<br>
-        户口：辽宁盘锦 | 现住：北京昌平<br>
-        <p>电话：15133212263</p>
-        <p>邮箱：doupeng93@foxmail.com</p>
-        <p>微信：peng113783</p>
-        <img width="100" height="100" src="https://raw.githubusercontent.com/doupengs/doupengs.github.io/master/img/wechat-me.jpg" />
-        <p>QQ：724488033</p>
+        <b>男 | 汉 | 未婚 | 1993年2月 | 2年工作经验</b><br>
+        <b>户口</b>：辽宁盘锦 | <b>现住</b>：北京昌平<br>
+        <p><b>电话</b>：15133212263</p>
+        <p><b>邮箱</b>：doupeng93@foxmail.com</p>
+        <p><b>微信</b>：peng113783</p>
+        <img width="200" height="200" src="https://raw.githubusercontent.com/doupengs/doupengs.github.io/master/img/wechat-me.jpg" />
+        <p><b>QQ</b>：724488033</p>
       </div>
       <dl class="details">
         <dt>
@@ -58,15 +61,21 @@
             </li>
             <li>
               <strong>个人微信公众号：</strong>苦短人生遂学python | py_code_boy<br>
-              <img width="100" height="100" src="https://raw.githubusercontent.com/doupengs/doupengs.github.io/master/img/wechat-gzh.jpg" />
+              <img width="200" height="200" src="https://raw.githubusercontent.com/doupengs/doupengs.github.io/master/img/wechat-gzh.jpg" />
             </li>
           </ul>
+        </dd>
+        <dt>
+          <h5>自我评价</h5>
+        </dt>
+        <dd>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;生活中自己是一个乐观向上的人，工作中喜欢明确的分工，有团队意识和责任心，有一点强迫症，但我认为在写代码上是好事，所以我又良好的代码风格，工作中遇到什么难题，我首先会找在网上查阅相关资料，喜欢自学专研，解决不了的难题会像有经验的前辈请教，因为我觉得自己就是这么一步步走过来的，我觉得不怕有什么你不会的，而是就怕你知道不会而不想去了解，去学习。
         </dd>
         <dt>
           <h5>工作经历</h5>
         </dt>
         <dd>
-          <div class="work-experience">
+          <div class="work-experience" style='border-bottom:5px solid #FEE0C6'>
             <p>2016/07 - 至今</p>
             <h6>北京国诚信征信有限公司 | Python爬虫工程师</h6>
             <p>
@@ -109,7 +118,7 @@
           <h5>项目经验</h5>
         </dt>
         <dd>
-          <div class="project-experience">
+          <div class="project-experience" style='border-bottom:5px solid #FEE0C6'>
             <p>2016/07 - 2016/10</p>
             <h6>爬虫框架的开发</h6>
             <p>
@@ -133,7 +142,7 @@
               &nbsp;&nbsp;个人博客的文档介绍：<a href='https://doupengs.github.io/tags/#dpspider' style='text-decoration: none;'>https://doupengs.github.io/tags/#dpspider</a>
             </p>
           </div>        
-          <div class="project-experience">
+          <div class="project-experience" style='border-bottom:5px solid #FEE0C6'>
             <p>2016/11 - 2017/01</p>
             <h6>微信聊天机器人(个人)</h6>
             <p>
@@ -147,7 +156,7 @@
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;可布置在服务器上的微信聊天机器人
             </p>
           </div>
-          <div class="project-experience">
+          <div class="project-experience" style='border-bottom:5px solid #FEE0C6'>
             <p>2016/10 - 2016/11</p>
             <h6>个人和企业社会负面信息收集</h6>
             <p>
@@ -162,7 +171,7 @@
               &nbsp;&nbsp;4. 中国住建部-建筑行业的招投标相关信息
             </p>
           </div>
-          <div class="project-experience">
+          <div class="project-experience" style='border-bottom:5px solid #FEE0C6'>
             <p>2016/09 - 2016/10</p>
             <h6>舆情新闻</h6>
             <p>
@@ -227,6 +236,27 @@
           </div>
         </dd>
         <dt>
+          <h5>职业技能</h5>
+        </dt>
+        <dd>
+          <p>
+            &nbsp;&nbsp; 01. 掌握使用urllib,urllib2以及第三方库requests。<br>
+            &nbsp;&nbsp; 02. 页面解析方面使用re,json,xpath, beautifulsoup,pyquery。<br>
+            &nbsp;&nbsp; 03. 利用api接口抓取网页数据。<br>
+            &nbsp;&nbsp; 04. 了解scrapy,pyspider等python流行爬虫框架。<br>
+            &nbsp;&nbsp; 05. selenium和phantomjs结合使用得到渲染后的网页源代码。<br>
+            &nbsp;&nbsp; 06. 利用python对TXT,pdf.csv等类型文件的操作。<br>
+            &nbsp;&nbsp; 07. 多线程与多进程的使用。<br>
+            &nbsp;&nbsp; 08. 熟悉Django web框架开发。<br>
+            &nbsp;&nbsp; 09. 熟悉MTV,MVC的“设计模式”，“松耦合的开发理念”。<br>
+            &nbsp;&nbsp; 10. 熟悉Linux操作系统的一些常用命令。<br>
+            &nbsp;&nbsp; 11. 了解mysql，oracle数据库的基本命令和redis数据库。<br>
+            &nbsp;&nbsp; 12. 掌握HTML网页各项标签，DIV+CSS网页布局。<br>
+            &nbsp;&nbsp; 13. 熟悉javascript和jquery定义函数和一些基本的网页特效。<br>
+            &nbsp;&nbsp; 14. 掌握ajax对象的创建，以及ajax的异步请求和提交。
+          </p>
+        </dd>
+        <dt>
           <h5>证书</h5>
         </dt>
         <dd>
@@ -254,17 +284,6 @@
           </div>
         </dd>
         <dt>
-          <h5>性格</h5>
-        </dt>
-        <dd>
-          <p>
-            &nbsp;&nbsp; 1. 有团队意识和责任心<br>
-            &nbsp;&nbsp; 2. 喜欢自学专研<br>
-            &nbsp;&nbsp; 3. 乐观向上<br>
-            &nbsp;&nbsp; 4. 富有正能量<br>
-          </p>
-        </dd>
-        <dt>
           <h5>爱好</h5>
         </dt>
         <dd>
@@ -276,5 +295,6 @@
         </dd>
       </dl>
     </div>
+  </div>
   </body>
 </html>
