--- a/game/xiaobiaobei.html
+++ b/game/xiaobiaobei.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>2017相遇在一起</title>
 
-  <link href="style/main_wbq.css" rel="stylesheet" type="text/css">
+  <link href="style/main_tc.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
