--- a/game/xiaobiaobei.html
+++ b/game/xiaobiaobei.html
@@ -78,7 +78,7 @@
       执子之手，与子偕老。<br>
       共看云卷云舒，齐享琴瑟合鸣。<br><br>
       2017.01.18<br><br>
-      Copyright©|纯属小表贝（梅梅|2017<br>
+      Copyright©|纯属小表贝(梅梅)|2017<br>
       💋版权所有
     </p>
   </div>
