--- a/musicplayer/index.html
+++ b/musicplayer/index.html
@@ -307,7 +307,7 @@ var lyric=[
     {
 	    'name':"你知道我在等你吗",
 	    'img':'img/MME.jpg',
-	    'audio_src':'song/MME.mp3',
+	    'audio_src':'https://www.doupengs.github.io/MME.mp3"',
 	    'content':"[00:00.00]小白狼耿小姐[00:10.00] 页面制作: 朤。[00:20.00]@猿来如此[00:30.00]https://www.doupengs.github.io[00:39.00]莫名我就喜欢你 深深地爱上你[00:45.30]没有理由 没有原因[00:52.00]莫名我就喜欢你 深深地爱上你[00:58.00]从见到你的那一天起[01:08.00]你知道我在等你吗? [01:12.00]你如果真的在乎我[01:15.00]又怎会让无尽的夜陪我度过[01:21.00]你知道我在等你吗? [01:24.30]你如果真的在乎我[01:28.00]又怎会让握花的手在风中颤抖[01:38.00]莫名我就喜欢你 深深地爱上你[01:43.00]没有理由 没有原因[01:51.00]莫名我就喜欢你 深深地爱上你[01:57.00]从见到你的那一天起[02:07.00]你知道我在等你吗?[02:09.30]你如果真的在乎我[02:13.00]又怎会让无尽的夜陪我度过[02:19.30]你知道我在等你吗?[02:23.00]你如果真的在乎我[02:26.00]又怎会让握花的手在风中颤抖[02:32.00]莫名我就喜欢你 深深地爱上你[02:39.00]在黑夜里倾听你的声音[02:46.00]......[03:24.00]你知道我在等你吗?[03:27.00]你如果真的在乎我[03:30.00]又怎会让无尽的夜陪我度过[03:36.30]你知道我在等你吗?[03:39.30]你如果真的在乎我[03:43.00]又怎会让握花的手在风中颤抖[03:49.30]莫名我就喜欢你 深深地爱上你[03:56.00]在黑夜里倾听你的声音[04:08.00]",   
     },
 ]
