--- a/birthday/two.html
+++ b/birthday/two.html
@@ -185,7 +185,7 @@
   </p>
   <br>
   <p>
-    Copyright © <a href='https://doupengs.github.io' style='text-decoration: none;'><font color='#8b6a60'>管理【四月】朤。</font></a
+    Copyright © <a href='https://doupengs.github.io' style='text-decoration: none;'><font color='#8b6a60'>管理【四月】朤。</font></a> 2017
   </p>
 </div>
 <div style="text-align:center;clear:both">
