--- a/birthday/two.html
+++ b/birthday/two.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>祝【二位群友】生日快乐! by【四月】朤。</title>
+  <title>祝二位群友生日快乐!</title>
 
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css" media="screen" type="text/css" />
@@ -185,7 +185,7 @@
   </p>
   <br>
   <p>
-    Copyright © <a href='https://doupengs.github.io' style='text-decoration: none;'><font color='#8b6a60'>管理【四月】朤。</font></a> 2017
+    Copyright © <a href='https://doupengs.github.io' style='text-decoration: none;'><font color='#8b6a60'>管理员【四月】朤。</font></a> 2017
   </p>
 </div>
 <div style="text-align:center;clear:both">
