--- a/birthday3/index.html
+++ b/birthday3/index.html
@@ -248,7 +248,7 @@
 			</div>
 		</div>
 		<div class="music"></div>
-		<audio id="aud" autoplay="autoplay" src="陪你度过漫长岁月-陈奕迅.mp3" loop="loop"></audio>
+		<audio id="aud" autoplay="autoplay" src="../birthday/happy-birthday.mp3" loop="loop"></audio>
 		<script>
 			var mySwiper = new Swiper(".swiper-container", {
 				direction: 'vertical',
