--- a/birthday3/index.html
+++ b/birthday3/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>~岚~生日快乐</title>
+		<title>~岚~ 生日快乐</title>
 		<link rel="stylesheet" href="css/animate.css" />
 		<link rel="stylesheet" href="css/swiper.min.css" />
 		<script type="text/javascript" src="js/swiper.animate1.0.2.min.js"></script>
@@ -199,19 +199,19 @@
 			<div class="swiper-wrapper">
 				<div class="swiper-slide">
 					<img src="img/bg.jpg" />
-					<p class="p1 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s"><br/><br/>~岚~</p>
+					<p class="p1 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s"><br/>~岚~</p>
 					<p class="p2 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="2s" swiper-animate-delay="1.8s">2017年11月25日</p>
 					<div class="last ani infinite" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.5s"></div>
 				</div>
 				<div class="swiper-slide">
 					<img class="img ani" swiper-animate-effect="rotateInUpLeft" swiper-animate-duration="2s" swiper-animate-delay="1s" src="img/bg1.jpg" />
 					<p class="p3 ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="1s" swiper-animate-delay="1.8s"><br/><br/>①正青春~</p>
-					<p class="p4 ani" swiper-animate-effect="fadeInUpBig" swiper-animate-duration="2s" swiper-animate-delay="2s"><br/><br/>日光给你镀上成熟，月华增添你的妩媚。<br/>在你生日这一天，<br/>愿朋友的祝福汇成你快乐的源泉，<br/>一起涌向你……</p>
+					<p class="p4 ani" swiper-animate-effect="fadeInUpBig" swiper-animate-duration="2s" swiper-animate-delay="2s"><br/><br/>日光给你镀上成熟，月华增添你的妩媚。在你生日这一天，<br/>愿朋友的祝福汇成你快乐的源泉，<br/>一起涌向你……</p>
 					<div class="last ani infinite" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.5s"></div>
 				</div>
 				<div class="swiper-slide">
 					<img class="img ani" swiper-animate-effect="slideInDown" swiper-animate-duration="2s" swiper-animate-delay="1s" src="img/bg2.jpg" />
-					<p class="p5 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.8s"><br/><br/>②备行囊~</p>
+					<p class="p5 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.8s">②备行囊~</p>
 					<p class="p6 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="2s" swiper-animate-delay="2s">朋友是永久的知心伴侣。<br/>A friend is a loving companion at all times. </p>
 					<div class="last ani infinite" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.5s"></div>
 				</div>
@@ -229,8 +229,8 @@
 				</div>
 				<div class="swiper-slide">
 					<img class="img ani" swiper-animate-effect="swing" swiper-animate-duration="2s" swiper-animate-delay="2.5s" src="img/bg5.jpg" />
-					<p class="p11 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.8s">⑤知你我~<br/><br/></p>
-					<p class="p12 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="2s" swiper-animate-delay="2s"><br/><br/><br/>有朋友同行是种安全，有朋友鼓励是种力量，有朋友忠告是种激励，有朋友想念是种幸福！愿你开心每一秒，快乐每一天，幸福每一年，健康到永远！</p>
+					<p class="p11 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.8s">⑤知你我~<br/></p>
+					<p class="p12 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="2s" swiper-animate-delay="2s"><br/><br/>有朋友同行是种安全，有朋友鼓励是种力量，有朋友忠告是种激励，有朋友想念是种幸福！愿你开心每一秒，快乐每一天，幸福每一年，健康到永远！</p>
 					<div class="last ani infinite" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.5s"></div>
 				</div>
 				<div class="swiper-slide">
