--- a/birthday3/index.html
+++ b/birthday3/index.html
@@ -241,7 +241,7 @@
 				</div>
 				<div class="swiper-slide">
 					<img class="img ani" swiper-animate-effect="flipInX" swiper-animate-duration="2s" swiper-animate-delay="1s" src="img/bg7.jpg" />
-					<p class="p15 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.8s">四海聚~月未央</p>
+					<p class="p15 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.8s">月未央~四海聚</p>
 					<p class="p16 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="2s" swiper-animate-delay="2s">心血来潮建了这么个小群，我不知道它能存在多久，恰巧你又是第一个过生日的“幸运者”【偷笑】<br/>所以代表全体友友祝~岚~生日快乐！<br/>大家要工作第一，开心愉聊【大笑】</p>
 					
 				</div>
