--- a/mylove/index.html
+++ b/mylove/index.html
@@ -21,27 +21,26 @@
             <div id="wrap">
                <div id="text">
                     <div id="code">                 
-                    <span class="say">2017-08-02 下午4:28 #我们成为了好友#</span><br>
+                    <span class="say">2017-10-05 下午2:15 #岚岚给我说了第一句话#</span><br>
                     <br>
-                    <span class="say">随后也有了我对她说的第一句话 “你好”</span><br>
-                    <span class="say">大约过了八分钟，我知道了她的名字 “郭雅欣”</span><br>
-                    <span class="say">可能是我的一句江南皮革厂</span><br>
-                    <span class="say">得到了她对我的第一句评价 “哈哈 你好逗哦”</span><br>
+                    <span class="say">我们有着相同的音乐喜好</span><br>
+                    <span class="say">我们有着共同的对爱的追求</span><br>
                     <br>
-                    <span class="say">2017-08-05 下午1:00 #神奇美妙的一天#</span><br>
+                    <span class="say">2017-12-01 凌晨 #神奇美妙的一天#</span><br>
                     <br>
-                    <span class="say">我喜欢...</span><br>     
-                    <span class="say">春天的花</span><br> 
-                    <span class="say">夏天的树</span><br> 
-                    <span class="say">秋天的黄昏</span><br> 
-                    <span class="say">冬天的阳光</span><br> 
-                    <span class="say">还有今后每一天的你</span><br> 
+                    <span class="say">我想我们可以一起努力</span><br>     
+                    <span class="say">一起创造属于我们自己的家</span><br> 
+                    <span class="say">我们想要的生活</span><br> 
+                    <span class="say">在你不开心难过的时候</span><br> 
+                    <span class="say">我都在你的身边</span><br> 
+                    <span class="say">我希望这个时间永远不要停</span><br> 
+                    <span class="say">可以吗？亲爱的，岚~~</span><br> 
                     <br>
                     <span class="say"><span class="space"></span>-- 朋朋</span>
                     </div>
                 </div>
                 <div id="clock-box">
-                    朋朋 与 欣欣 在一起的
+                    朋朋 与 岚岚 在一起的
                         <div id="clock"></div>
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
@@ -183,8 +182,8 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
             var together = new Date();
-            together.setFullYear(2017, 7, 5);
-            together.setHours(13);
+            together.setFullYear(2017, 12, 1);
+            together.setHours(0);
             together.setMinutes(0);
             together.setSeconds(0);
             together.setMilliseconds(0);
